fixed social icon on mobile devices

--- a/css/templatemo-topic-listing.css
+++ b/css/templatemo-topic-listing.css
@@ -574,7 +574,7 @@ strong {
 
 .custom-block-overlay {
   height: 100%;
-  min-height: 500px;
+  min-height: 450px;
   padding: 0;
 }
 
@@ -1024,7 +1024,7 @@ blockquote {
   border-radius: var(--border-radius-large);
   color: var(--white-color);
   display: block;
-  margin-right: 10px;
+  margin-right: 0px;
   text-align: center;
   width: 50px;
   height: 50px;
